tests/snapshots/snapshots__budget_anyhow_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1000 tokens)

Cargo.toml

README.md
   166→#### License

rust-toolchain.toml
     1→[toolchain]

src/backtrace.rs
     8→pub(crate) enum Backtrace {}
    71→mod capture {
   211→        pub(crate) fn capture() -> Backtrace {

src/chain.rs
    11→pub(crate) struct Chain<'a> {
    16→pub(crate) enum ChainState<'a> {
    27→    #[cold]
    28→    pub fn new(head: &'a (dyn StdError + 'static)) -> Self {
    29→        Chain {
      →        …
    36→    type Item = &'a (dyn StdError + 'static);
    57→impl DoubleEndedIterator for Chain<'_> {
    94→impl Default for Chain<'_> {

src/context.rs
     7→use crate::nightly::{self, Request};
    12→    pub trait StdError {
   146→    #[cfg(error_generic_member_access)]
   147→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
   160→    #[cfg(error_generic_member_access)]
   161→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
   166→struct Quoted<C>(C);
   189→    pub trait Sealed {}

src/ensure.rs
     1→use crate::Error;
    10→pub trait BothDebug {
    25→pub trait NotBothDebug {
    35→struct Buf {

src/error.rs
     4→use crate::nightly::{self, Request};
     6→use crate::ptr::Mut;
    14→use core::ops::{Deref, DerefMut};
   705→    type Target = dyn StdError + Send + Sync + 'static;
   740→struct ErrorVTable {

src/fmt.rs
    69→struct Indented<'a, D> {
    79→    fn write_str(&mut self, s: &str) -> fmt::Result {

src/kind.rs
    47→use crate::Error;
    48→use core::fmt::{Debug, Display};
    51→use crate::StdError;
    53→use alloc::boxed::Box;
    55→pub struct Adhoc;
    77→pub struct Trait;
    99→#[cfg(any(feature = "std", not(anyhow_no_core_error)))]
   100→pub struct Boxed;

src/lib.rs
   279→trait StdError: Debug + Display {
   280→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
   286→pub use anyhow as format_err;
   390→pub struct Error {
   391→    inner: Own<ErrorImpl>,
   392→}
   415→pub struct Chain<'a> {
   416→    state: crate::chain::ChainState<'a>,
   417→}
   419→/// `Result<T, Error>`
   420→///
      →…
   468→pub type Result<T, E = Error> = core::result::Result<T, E>;
   616→pub trait Context<T, E>: context::private::Sealed {
   618→    fn context …
   624→    fn with_context …
   650→pub fn Ok …
   710→        pub trait Bool {
   711→            fn not(self) -> bool;
   716→            fn not …
   723→            fn not …

src/macros.rs
    70→macro_rules! __ensure {

src/nightly.rs
    10→pub use core::error::Request;
    45→fn request_ref …

src/ptr.rs
     6→pub struct Own …
    64→pub struct Ref …
   125→pub struct Mut …
   181→pub trait CastTo {
   182→    type Target;
   183→}
   186→    type Target = T;

src/wrapper.rs
     1→use crate::StdError;
     5→use alloc::boxed::Box;
     8→use crate::nightly::{self, Request};
    11→pub struct MessageError<M>(pub M);
    34→pub struct DisplayError<M>(pub M);
    58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
    80→    #[cfg(error_generic_member_access)]
    81→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
