tests/snapshots/snapshots__budget_anyhow_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2004 tokens)

Cargo.toml
     1→[package]
    14→[features]
    18→[dependencies]
    25→[dev-dependencies]
    32→[package.metadata.docs.rs]

README.md
     1→Anyhow&ensp;¯\\\_(°ペ)\_/¯
    21→## Details
   126→## No-std support
   144→## Comparison to failure
   155→## Comparison to thiserror
   166→#### License
   169→Licensed under either of <a href="LICENSE-APACHE">Apache License, Version
      →…

build.rs

rust-toolchain.toml
     1→[toolchain]

src/backtrace.rs
     8→pub(crate) enum Backtrace {}
    11→macro_rules! impl_backtrace {
    18→macro_rules! impl_backtrace {
    25→macro_rules! backtrace {
    32→macro_rules! backtrace {
    39→macro_rules! backtrace_if_absent {
    53→macro_rules! backtrace_if_absent {
    64→macro_rules! backtrace_if_absent {
    70→#[cfg(all(not(std_backtrace), feature = "backtrace"))]
    71→mod capture {

src/chain.rs
    11→pub(crate) struct Chain<'a> {
    12→    state: ChainState<'a>,
      →…
    16→pub(crate) enum ChainState<'a> {
    17→    Linked {
      →…
    36→    type Item = &'a (dyn StdError + 'static);

src/context.rs
     7→use crate::nightly::{self, Request};
     9→mod ext {
    12→    pub trait StdError {
   186→pub(crate) mod private {
   189→    pub trait Sealed {}

src/ensure.rs
    10→pub trait BothDebug {
    25→pub trait NotBothDebug {
   105→macro_rules! __parse_ensure {
   886→macro_rules! __fancy_ensure {
   912→macro_rules! __fallback_ensure {

src/error.rs
     4→use crate::nightly::{self, Request};
     6→use crate::ptr::Mut;
   705→    type Target = dyn StdError + Send + Sync + 'static;
   934→pub(crate) struct ErrorImpl<E = ()> {
   935→    vtable: &'static ErrorVTable,
      →…
   952→pub(crate) struct ContextError<C, E> {
   953→    pub context: C,
      →…

src/fmt.rs

src/kind.rs
    51→use crate::StdError;
    55→pub struct Adhoc;
    58→pub trait AdhocKind: Sized {
    77→pub struct Trait;
    80→pub trait TraitKind: Sized {
   100→pub struct Boxed;
   104→pub trait BoxedKind: Sized {

src/lib.rs
   251→#[macro_use]
   252→mod backtrace;
   253→mod chain;
   254→mod context;
   255→mod ensure;
   256→mod error;
   257→mod fmt;
   258→mod kind;
   259→mod macros;
   260→#[cfg(error_generic_member_access)]
   261→mod nightly;
   262→mod ptr;
   263→mod wrapper;
   279→trait StdError: Debug + Display {
   286→pub use anyhow as format_err;
   390→pub struct Error {
   391→    inner: Own<ErrorImpl>,
   392→}
   415→pub struct Chain<'a> {
   416→    state: crate::chain::ChainState<'a>,
   417→}
   419→/// `Result<T, Error>`
   420→///
   421→/// This is a reasonable return type to use throughout your application but also
   422→/// for `fn main`; if you do, failures will be printed along with any
   423→/// [context][Context] and a backtrace if one was captured.
   424→///
   425→/// `anyhow::Result` may be used with one *or* two type parameters.
   426→///
   427→/// ```rust
   428→/// use anyhow::Result;
   429→///
   430→/// # const IGNORE: &str = stringify! {
   431→/// fn demo1() -> Result<T> {...}
   432→///            // ^ equivalent to std::result::Result<T, anyhow::Error>
   433→///
   434→/// fn demo2() -> Result<T, OtherError> {...}
   435→///            // ^ equivalent to std::result::Result<T, OtherError>
   436→/// # };
   437→/// ```
   438→///
   439→/// # Example
   440→///
   441→/// ```
   442→/// # pub trait Deserialize {}
   443→/// #
   444→/// # mod serde_json {
      →…
   468→pub type Result<T, E = Error> = core::result::Result<T, E>;
   616→pub trait Context<T, E>: context::private::Sealed {
   655→#[doc(hidden)]
   656→pub mod __private {
   663→    pub use crate::ensure::{BothDebug, NotBothDebug};
   665→    pub use alloc::format;
   667→    pub use core::result::Result::Err;
   669→    pub use core::{concat, format_args, stringify};
   671→    #[doc(hidden)]
   672→    pub mod kind {
   674→        pub use crate::kind::{AdhocKind, TraitKind};
   678→        pub use crate::kind::BoxedKind;
   708→    mod not {
   710→        pub trait Bool {

src/macros.rs
    58→macro_rules! bail {
    70→macro_rules! __ensure {
   204→macro_rules! anyhow {
   230→macro_rules! __anyhow {

src/nightly.rs
    10→pub use core::error::Request;

src/ptr.rs
     6→pub struct Own<T>
     7→where
     8→    T: ?Sized,
     9→{
    10→    pub ptr: NonNull<T>,
    11→}
    64→pub struct Ref<'a, T>
    65→where
    66→    T: ?Sized,
    67→{
    68→    pub ptr: NonNull<T>,
    69→    lifetime: PhantomData<&'a T>,
    70→}
   125→pub struct Mut<'a, T>
   126→where
   127→    T: ?Sized,
   128→{
   129→    pub ptr: NonNull<T>,
   130→    lifetime: PhantomData<&'a mut T>,
   131→}
   181→pub trait CastTo {
   182→    type Target;
   183→}
   186→    type Target = T;

src/wrapper.rs
     8→use crate::nightly::{self, Request};
    11→pub struct MessageError<M>(pub M);
    34→pub struct DisplayError<M>(pub M);
    58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);

tests/common/mod.rs

tests/crate/Cargo.toml

tests/crate/test.rs
     3→pub use anyhow::*;

tests/drop/mod.rs
     8→#[derive(Debug)]
     9→pub struct Flag {
    10→    atomic: Arc<AtomicBool>,
    11→}
    25→#[derive(Debug)]
    26→pub struct DetectDrop {
    27→    has_dropped: Flag,
    28→}

tests/test_boxed.rs
    13→struct MyError {

tests/test_context.rs
    22→macro_rules! context_type {
    44→struct LowLevel {

tests/test_ensure.rs
    43→    type Output = bool;
    78→fn assert_err …

tests/test_ffi.rs
     6→#[no_mangle]
     7→pub extern "C" fn anyhow1(err: anyhow::Error) {
    11→#[no_mangle]
    12→pub extern "C" fn anyhow2(err: &mut Option<anyhow::Error>) {
    16→#[no_mangle]
    17→pub extern "C" fn anyhow3() -> Option<anyhow::Error> {

tests/test_source.rs
     7→enum TestError {

tests/ui/ensure-nonbool.rs
    11→    type Target = bool;
    12→    fn deref(&self) -> &Self::Target {
    18→    type Output = bool;
    19→    fn not(self) -> Self::Output {

tests/ui/no-impl.rs
     3→#[derive(Debug)]
     4→struct Error;
