tests/snapshots/snapshots__budget_anyhow_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (12 words)

backtrace.rs
chain.rs
context.rs
ensure.rs
error.rs
fmt.rs
kind.rs
lib.rs
macros.rs
nightly.rs
ptr.rs
wrapper.rs
