tests/snapshots/snapshots__budget_anyhow_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (14 words)

README.md
build.rs
src/backtrace.rs
src/chain.rs
src/context.rs
src/ensure.rs
src/error.rs
src/fmt.rs
src/kind.rs
src/lib.rs
src/macros.rs
src/nightly.rs
src/ptr.rs
src/wrapper.rs
